reduction 4 pages papier, suppression 2 figures
git-svn-id: https://svn.lsv.ens-cachan.fr/kuehne/projects/IMITATOR2/trunk@521 6f1578d2-a1e8-4f7d-a79a-10a3a1991f00

--- a/articles/2012-05-07-iFM/biblioFM.bib
+++ b/articles/2012-05-07-iFM/biblioFM.bib
@@ -190,10 +190,10 @@
 @inproceedings{AK12,
   	author =	{Andr{\'e}, {\'E}tienne and K\"uhne, Ulrich},
   	booktitle =	{{iFM}'12},
-  	note =	{To appear.},
   	title =	{Parametric Analysis of Hybrid Systems Using {HyMITATOR}},
   	year =	{2012},
 }
+  	note =	{To appear.},
 
 
 
@@ -482,7 +482,7 @@ Proceedings of the 17th International Colloquium on Automata, Languages and Prog
 @article{ADI2006,
  author = {Alur, Rajeev and Dang, Thao and Ivan\v{c}i\'{c}, Franjo},
  title = {Predicate abstraction for reachability analysis of hybrid systems},
- journal = {ACM Transactions in Embedded Computing Systems},
+ journal = {ACM Trans. Embedded Computer Systems},
  volume = {5},
  issue = {1},
  year = {2006},
@@ -498,6 +498,7 @@ Proceedings of the 17th International Colloquium on Automata, Languages and Prog
 } 
 ACM Trans. Embed. Comput. Syst.
  month = {February},
+ Transactions in Embedded Computing Systems
 
  
 @inproceedings{adss07,
