--- a/articles/2012-05-07-iFM/2012-05-07-iFM-HYMITATOR.tex
+++ b/articles/2012-05-07-iFM/2012-05-07-iFM-HYMITATOR.tex
@@ -511,18 +511,19 @@ This gives more accurate results, by reducing the size of the possible ``holes''
 %-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%
 \begin{figure}[t]
 	\centering
+	\newcommand{\graphwidth}{3.68cm}
 	\subfigure[Reachable states]{
-		\includegraphics[width=3.6cm]{plot_t_x1}
+		\includegraphics[width=\graphwidth]{plot_t_x1}
 		\label{fig:plot1}
 	}
 %     \includegraphics[width=3.5cm]{plot_t_x2} \;
 %     \includegraphics[width=3.5cm]{plot_t_x3}
 	\subfigure[Trajectories]{
-		\includegraphics[width=3.6cm]{navigation_map.pdf}
+		\includegraphics[width=\graphwidth]{navigation_map.pdf}
 		\label{fig:plot2}
 	}
 	\subfigure[Behavioral cartography]{
-		\includegraphics[height=3.6cm]{rhb_cart2.pdf}
+		\includegraphics[height=\graphwidth]{rhb_cart2.pdf}
 		\label{fig:plot3}
 	}
 %     \label{fig:plot_zone}
