--- a/articles/2012-05-07-iFM/biblioFM.bib
+++ b/articles/2012-05-07-iFM/biblioFM.bib
@@ -103,7 +103,7 @@
 
 
 @misc{afks,
-  	author =	{Andr{\'e}, {\'E}tienne and Fribourg, Laurent K\"uhne, Ulrich and Soulat, Romain},
+  	author =	{Andr{\'e}, {\'E}tienne and Fribourg, Laurent and K\"uhne, Ulrich and Soulat, Romain},
   	title =	{{IMITATOR} 2.5},
   	note = {Available at \url{www.lsv.ens-cachan.fr/Software/imitator/}}
 }
@@ -482,7 +482,7 @@ Proceedings of the 17th International Colloquium on Automata, Languages and Prog
 @article{ADI2006,
  author = {Alur, Rajeev and Dang, Thao and Ivan\v{c}i\'{c}, Franjo},
  title = {Predicate abstraction for reachability analysis of hybrid systems},
- journal = {ACM Trans. Embedded Computer Systems},
+ journal = {ACM Trans. Embedded Computing Systems},
  volume = {5},
  issue = {1},
  year = {2006},
