--- a/articles/2012-05-07-iFM/2012-05-07-iFM-HYMITATOR.tex
+++ b/articles/2012-05-07-iFM/2012-05-07-iFM-HYMITATOR.tex
@@ -277,7 +277,7 @@
 \newcommand{\gdot}{\textsc{dot}}
 \newcommand{\graphviz}{Graphviz}
 \newcommand{\hytech}{{\sc HyTech}}
-\newcommand{\imitator}{\textsc{Imitator}}
+\newcommand{\imitator}{IMITATOR} % \textsc{Imitator}
 % \newcommand{\imitatordeux}{\textsc{Imitator}\,II}
 \newcommand{\hymitator}{HyMITATOR} % \textsc{Hymitator}
 \newcommand{\kronos}{\textsc{Kronos}}
@@ -342,8 +342,8 @@ $^2$Group for Computer Architecture, University of Bremen, Germany}
 
 \begin{abstract}
 	Hybrid automata are a powerful formalism for modeling and verifying hybrid systems, that combine continuous and discrete behavior.
-	A common problem in hybrid system verification is the good parameters problem, which consists in identifying a set of parameter valuations which guarantee a certain behavior of a system.
-	We introduce here \hymitator{}, a tool allowing efficient parameter synthesis for hybrid automata, and providing the system with a quantitative measure of its robustness.
+	A common problem for hybrid systems is the good parameters problem, which consists in identifying a set of parameter valuations guaranteeing a certain good behavior of a system.
+	We introduce here \mbox{\hymitator{}}, a tool for efficient parameter synthesis for hybrid automata, providing hybrid systems with a quantitative measure of their robustness.
 \end{abstract}
 
 \keywords{Hybrid automata, Verification, Parameter synthesis, Robustness}
