minor modifications for final version
git-svn-id: https://svn.lsv.ens-cachan.fr/kuehne/projects/IMITATOR2/branches/pta@529 6f1578d2-a1e8-4f7d-a79a-10a3a1991f00

--- a/articles/2012-03-05-FM/biblio.bib
+++ b/articles/2012-03-05-FM/biblio.bib
@@ -203,7 +203,7 @@ d'automatisation en r{\'e}seau},
 @inproceedings{AFS12,
           author =        {Andr{\'e}, {\'E}tienne and Fribourg, Laurent and Soulat, Romain},
           booktitle =        {NFM},
-          note =        {To appear},
+          pages =        {100-105},
           publisher =        {Springer},
           series =        {LNCS},
           title =        {Enhancing the Inverse Method with State Merging},
@@ -289,10 +289,10 @@ Systems},
 
 
 @misc{imitator-web,
-        title = {\imitator{}'s {W}eb Page},
         howpublished = "\url{http://www.lsv.ens-cachan.fr/Software/imitator/}"
 }
         author = {Andr\'e, \'Etienne},
+        title = {\imitator{}'s {W}eb Page},
 
 @misc{imitator2_web,
         author = {\imitatordeux{} Web Page},
