--- a/articles/2012-05-07-iFM/biblioFM.bib
+++ b/articles/2012-05-07-iFM/biblioFM.bib
@@ -188,13 +188,18 @@
 
   
 @inproceedings{AK12,
-  	author =	{Andr{\'e}, {\'E}tienne and K\"uhne, Ulrich},
-  	booktitle =	{{iFM}'12},
+  	author =	{Andr\'e, {\'E}tienne and K{\"u}hne, Ulrich},
+  	booktitle =	{Posters \& Tool demos Session of {iFM}'12},
+  	month =	jun,
+	pages =	{16-19}, 
+	publisher =	{CNR and ISTI},
   	title =	{Parametric Analysis of Hybrid Systems Using {HyMITATOR}},
+  	url =	{http://puma.isti.cnr.it/linkdoc.php?icode=2012-ED-001&authority=cnr.isti&collection=cnr.isti},
   	year =	{2012},
+   	lipn-category = "autc",
 }
-  	note =	{To appear.},
-
+  	address =	{Pisa, Italy},
+ 	editor =	{Mazzanti, Franco and Trentanni, Gianluca},
 
 
 @inproceedings{AS11,
@@ -1706,13 +1711,25 @@ Proceedings of the 9th International Conference on Concurrency Theory
 
 
 
-@INPROCEEDINGS{HPR97,
-    author = {N. Halbwachs and Y.-E. Proy and P. Roumanoff},
-    title = {Verification of Real-Time Systems using Linear Relation Analysis},
-    booktitle = {Formal Methods In System Design},
-    year = {1997},
-    pages = {157--185}
-}
+@article{HPR97,
+ author = {Halbwachs, Nicolas and Proy, Yann-Erick and Roumanoff, Patrick},
+ title = {Verification of Real-Time Systems using Linear Relation Analysis},
+ journal = {Formal Methods In System Design},
+ issue_date = {Aug. 1997},
+ volume = {11},
+ number = {2},
+ month = aug,
+ year = {1997},
+ issn = {0925-9856},
+ pages = {157--185},
+ numpages = {29},
+ url = {http://dx.doi.org/10.1023/A:1008678014487},
+ doi = {10.1023/A:1008678014487},
+ acmid = {262370},
+} 
+ publisher = {Kluwer Academic Publishers},
+ address = {Hingham, MA, USA},
+ keywords = {abstract interpretation, convex polyhedra, hybrid systems, real time systems, synchronous languages},
 
 
 @article{hsny94,
