added tree structure for branch and bound
git-svn-id: https://svn.lsv.ens-cachan.fr/kuehne/projects/IMITATOR2/branches/pta@546 6f1578d2-a1e8-4f7d-a79a-10a3a1991f00

--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -1,5 +1,5 @@
-                        Installing IMITATOR II
-                        ======================
+                        Installing IMITATOR
+                        ===================
 
 Note: In case of problem, please read this INSTALL file carefully before reporting a bug.
 
