--- a/articles/2012-03-05-FM/2012-06-04-FM-IMITATOR.tex
+++ b/articles/2012-03-05-FM/2012-06-04-FM-IMITATOR.tex
@@ -323,10 +323,12 @@
 % \title{Parametric Scheduling with IMITATOR}
 % \title{IMITATOR with Stopwatches and its Applications to Parametric Preemptive Scheduling}
 \title{IMITATOR 2.5: A Tool for Analyzing Robustness in Scheduling Problems}
-\author{\'Etienne Andr\'e$^1$, Laurent Fribourg$^2$, Ulrich K\"uhne$^3$ and Romain Soulat$^2$}
-\institute{$^1$LIPN, CNRS UMR 7030, Université Paris 13, France \\
-$^2$LSV -- ENS Cachan \& CNRS \\
-$^3$Universit\"at Bremen, Germany}
+\author{\'Etienne Andr\'e$^{1,2}$, Laurent Fribourg$^3$, Ulrich K\"uhne$^4$ and Romain Soulat$^3$}
+\institute{%$^1$LIPN, CNRS UMR 7030, Université Paris 13, France \\
+$^1$Université Paris 13, Sorbonne Paris Cité, LIPN, F-93430, Villetaneuse, France\\
+$^2$CNRS, UMR 7030, F-93430, Villetaneuse, France\\
+$^3$LSV -- ENS Cachan \& CNRS \\
+$^4$Universit\"at Bremen, Germany}
 
 
 
