--- a/slides/2012-06-15-IMITATOR/2012-06-15-IMITATOR.tex
+++ b/slides/2012-06-15-IMITATOR/2012-06-15-IMITATOR.tex
@@ -454,7 +454,7 @@
 	\bigskip
 
 	\small{\textbf{
-		\'E. Andr\'e$^1$, L. Fribourg$^2$, U. K\"uhne$^3$ and R. Soulat$^2$
+		\'E. Andr\'e$^1$, L. Fribourg$^2$, U. K\"uhne$^3$ and \underline{R. Soulat}$^2$
 	}}
 
 	\bigskip
@@ -2073,9 +2073,8 @@
 	\item \couleur{\imitator{}} 2.5 \refer{afks12}
 
 	\begin{itemize}
-		\item \imitator{}: ``\couleur{I}nverse \couleur{M}ethod for \couleur{I}nferring \couleur{T}ime \couleur{A}bstrac\couleur{T} Behavi\couleur{OR}''
-		\item 10\,000 lines of code
-		\item Program written in \couleur{\ocaml{}}
+		\item ``\couleur{I}nverse \couleur{M}ethod for \couleur{I}nferring \couleur{T}ime \couleur{A}bstrac\couleur{T} Behavi\couleur{OR}''
+		\item 10\,000 lines of \couleur{\ocaml{}} code
 		\item Makes use of the \couleur{PPL} library for handling polyhedra % \refer{bhz08}
 	\end{itemize}
 
@@ -2084,7 +2083,10 @@
 	\item Main contributors
 
 	\begin{itemize}
-		\item \'E. Andr\'e, L. Fribourg, U. K\"uhne, R. Soulat
+		\item \'Etienne Andr\'e
+		\item Laurent Fribourg
+		\item Ulrich K\"uhne
+		\item Romain Soulat
 	\end{itemize}
 
 	\medskip
