updated user manual
git-svn-id: https://svn.lsv.ens-cachan.fr/kuehne/projects/IMITATOR2/branches/pta@590 6f1578d2-a1e8-4f7d-a79a-10a3a1991f00

--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -35,26 +35,16 @@
   	month =	nov,
   	address =	{Nantes, France},
 
-@inproceedings{acef08,
-  	address =	{Liverpool, UK},
-  	author =	{Andr{\'e}, {\'E}. and Chatain, T. and Encrenaz, E. and Fribourg, L.},
-  	booktitle =	{{RP}'08},
-  	publisher =	{Elsevier Science Publishers},
-  	series =	{Electronic Notes in Theoretical Computer Science},
-  	title =	{An Inverse Method for Parametric Timed Automata},
-  	url =	{http://www.lsv.ens-cachan.fr/Publis/PAPERS/PDF/ACEF-rp08.pdf},
-  	year =	{2008},
-}
-  	month =	sep,
 
 @inproceedings{af10,
-  	author =	{Andr{\'e}, {\'E}. and Fribourg, L.},
-  	title =	{Behavioral Cartography of Timed Automata},
-  	booktitle =	{{RP}'10},
-  	publisher =	{Springer},
-  	series =	{LNCS},
-  	year =	{2010},
-  	note =	{To appear},
+          author =        {Andr{\'e}, {\'E}. and Fribourg, L.},
+          title =        {Behavioral Cartography of Timed Automata},
+          booktitle =        {{RP'10}},
+          pages =        {76-90},
+          publisher =        {Springer},
+          series =        {LNCS},
+          year =        {2010},
+          volume =        {6227},
 }
 
 
@@ -144,11 +134,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%% MES TRUCS NON PUBLIES %%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-@misc{imitator2_web,
-author = {Andr\'e, \'Etienne},
-title = {\imitator{} Web Page},
-howpublished = "\url{http://www.lsv.ens-cachan.fr/~andre/IMITATOR2}"
-}
 
 
 @inproceedings{acef08b,
@@ -298,6 +283,41 @@ u n published{afs09,
  publisher = {Elsevier Science Publishers Ltd.},
  address = {Essex, UK},
  }
+
+@inproceedings{AFKS12,
+  	address =	{Paris, France},
+  	author =	{Andr{\'e}, {\'E}tienne and Fribourg, Laurent and K{\"u}hne, Ulrich and Soulat, Romain},
+  	booktitle =	{{FM}'12},
+	pages =	 {33-36},
+  	publisher =	{Springer},
+  	series =	{LNCS},
+  	title =	{{IMITATOR}~2.5: A~Tool for Analyzing Robustness in Scheduling Problems},
+  	url =	{http://www.lsv.ens-cachan.fr/Publis/PAPERS/PDF/AFKS-fm12.pdf},
+	volume =	{7436},
+	year =	{2012},
+}
+  	editor =	{Giannakopoulou, Dimitra and M{\'e}ry, Dominique},
+  	month =	aug,
+
+
+ @inproceedings{AFS12,
+          author =        {Andr{\'e}, {\'E}tienne and Fribourg, Laurent and Soulat, Romain},
+          booktitle =        {NFM'12},
+          pages =        {100-105},
+          publisher =        {Springer},
+          series =        {LNCS},
+          title =        {Enhancing the Inverse Method with State Merging},
+          url =        {http://www.lsv.ens-cachan.fr/Publis/PAPERS/PDF/AFS-nfm12.pdf},
+          volume =        {7226},
+          year =        {2012},
+}
+          editor =        {Goodloe, Alwyn and Person, Suzette},
+          address =        {Norfolk, Virginia, USA},
+          month =        apr,
+          pages =        {100-105},
+          series =        {Lecture Notes in Computer Science},
+          booktitle =        {{P}roceedings of the 4th {NASA} {F}ormal {M}ethods {S}ymposium
+({NFM}'12)},
 
 
 
@@ -833,7 +853,7 @@ year =          2002,
   pages =     {661--667},
   volume =    {5643},
   year =      {2009},
-  booktitle = {CAV '09},
+  booktitle = {CAV'09},
   series =    {LNCS},
   publisher = {Springer},
 }
@@ -957,6 +977,30 @@ key={}
  publisher = {Academic Press, Inc.},
  address = {Duluth, MN, USA},
  }
+
+
+ 
+@inproceedings{Markey11,
+  author    = {Nicolas Markey},
+  title     = {Robustness in real-time systems},
+  booktitle = {SIES'11},
+  year      = {2011},
+  pages     = {28-34},
+  ee        = {http://doi.ieeecomputersociety.org/10.1109/SIES.2011.5953652},
+  crossref  = {DBLP:conf/sies/2011},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+@proceedings{DBLP:conf/sies/2011,
+  title     = {Industrial Embedded Systems (SIES), 2011 6th IEEE International
+               Symposium on, Vasteras, Sweden, 15-17 June, 2011},
+  booktitle = {SIES},
+  publisher = {IEEE},
+  year      = {2011},
+  isbn      = {978-1-61284-818-1},
+  ee        = {http://ieeexplore.ieee.org/xpl/mostRecentIssue.jsp?punumber=5937480},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
 
 
 @inproceedings{mp95,
@@ -1143,4 +1187,9 @@ key={}
 @misc{prism_web,
 	author={{\sc Prism} web page},
 	title={{\tt http://www.prismmodelchecker.org/}}
+}
+
+@misc{imitator_web,
+	title = {\imitator{} Web Page},
+	howpublished = "\url{http://www.lsv.ens-cachan.fr/Software/imitator/}"
 }
