--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -215,6 +215,13 @@ and, automaton, clock, discrete, do, end, endreach, False, forward, from, goto, 
 \begin{document}
 \maketitle
 
+\bigskip
+
+\begin{center}
+	\includegraphics[width=0.40\textwidth]{include/monkey.png}
+\end{center}
+
+\bigskip
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -230,7 +237,9 @@ We give here the installation requirements and the launching commands of \imitat
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\newpage
 \tableofcontents
+\newpage
 
 % \pagestyle{fancyplain}
 % \lhead{\fancyplain{}{\imitator{} \imitatorversion{} User Manual}}
